syntax = "proto3";

option csharp_namespace = "ReviewMicroservice.Application.Grpc.Protos";

service GrpcUserReview {
	rpc CreateUser (CreateUserRequest) returns (UserDto);
}

message UserDto {
	string id = 1;
	string userName = 2;
}

message CreateUserRequest {
	UserDto user = 1;
}